# derdiedas

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  index.html  lighthouserc.json  main.py  pyproject.toml
.github/workflows/: main.yml
data/: terms.json
src/derdiedas/: __init__.py
static/: 404.html  README.md  index.html  site.css  site.webmanifest
static/css/: site.css
static/icon/: site.webmanifest
