[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "derdiedas"
version = "0.9.1"
description = ""
authors = [{ name = "Alex Povel", email = "git@alexpovel.de" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "starlette>=0.31.0,<0.32.0",
    "uvicorn[standard]>=0.23.2,<0.24.0",
]

[dependency-groups]
dev = ["black>=23.3.0,<24.0.0", "mypy>=1.4,<2.0", "isort>=5.12.0,<6.0.0"]
data = ["pandas>=2.0.3,<3.0.0", "openpyxl>=3.1.1,<4.0.0"]

[tool.isort]
# https://pycqa.github.io/isort/docs/configuration/black_compatibility.html
profile = "black"

[tool.mypy]
show_error_codes = true
strict = true
namespace_packages = true
disallow_any_unimported = true
disallow_any_explicit = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
