[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "derdiedas"
version = "0.9.3"
description = ""
authors = [{ name = "Alex Povel", email = "git@alexpovel.de" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = ["starlette", "uvicorn[standard]"]

[dependency-groups]
dev = ["mypy", "ruff"]
data = ["pandas", "openpyxl"]

[tool.mypy]
show_error_codes = true
strict = true
namespace_packages = true
disallow_any_unimported = true
disallow_any_explicit = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
